# snake-cpp

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Main.cpp  Readme.md
3rd/: CMakeLists.txt
snake/: CMakeLists.txt
snake/include/: Apple.hpp  Drawable.hpp  Game.hpp  Snake.hpp  Specs.hpp  Utils.hpp
snake/source/: Apple.cpp  Game.cpp  Snake.cpp  Utils.cpp
