cmake_minimum_required(VERSION 3.17)
project(Snake VERSION 1.0.0 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
add_executable(SnakeGame "Main.cpp")
add_subdirectory(3rd)
add_subdirectory(snake)
target_link_libraries(SnakeGame PRIVATE snake)
